syntax = "proto2";

package pb;


enum ID {
    option allow_alias = true;

    MSG_BEGIN = 0;

    C2S_Connect = 1;
    S2C_Connect = 1;

    C2S_Heartbeat = 2;
    S2C_Heartbeat = 2;


    C2S_JoinRoom   = 10;
    S2C_JoinRoom   = 10;
    C2S_Progress   = 20;
    S2C_Progress    = 20;
    C2S_Ready       = 30;
    S2C_Ready       = 30;
    S2C_Frame       = 40;
    C2S_InputSkill  = 50;
    S2C_InputSkill  = 50;
    C2S_Result      = 100;
    S2C_Result      = 100;

    MSG_END = 255;
}

message C2S_ConnectMsg  {
	optional string token             = 1;
}

message S2C_ConnectMsg  {
	optional int32 errorCode             = 1;
}

message C2S_JoinRoomMsg  {
	optional int32 room             = 1;
}

message S2C_JoinRoomMsg  {
	optional uint64 id              = 1;
	repeated uint64 others          = 2;
}

message C2S_ProgressMsg  {
	optional int32 pro              = 1;
}


message S2C_ProgressMsg  {
	optional uint64 id              = 1;
	optional int32 pro              = 2;
}


message S2C_ReadyMsg  {
	optional uint64 id              = 1;
}


message C2S_InputSkillMsg  {
		optional int32 sid              = 1;
    	optional int32 x                = 2;
    	optional int32 y                = 3;
}

message InputData {
    optional uint64 id               = 1;
    optional int32 sid              = 2;
    optional int32 x                = 3;
    optional int32 y                = 4;
}

message FrameData {
    optional uint32 frameID          = 1;
    repeated InputData input               = 2;
}


message S2C_FrameMsg {
    repeated FrameData frames        = 1;
}


